OpenHealth/force-app/main/default/force-app/main/default/objects/Doctor__c/ContactNumber__c.field-meta.xml
<CustomField>
    <fullName>ContactNumber__c</fullName>
    <label>ContactNumber</label>
    <type>Phone</type>
    <length>255</length>
</CustomField>