OpenHealth/force-app/main/default/force-app/main/default/objects/Doctor__c/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label></label>
    <type></type>
    <length>255</length>
</CustomField>