OpenHealth/force-app/main/default/force-app/main/default/objects/Doctor__c/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>FirstName</label>
    <type>Text</type>
    <length>255</length>
</CustomField>