OpenHealth/force-app/main/default/force-app/main/default/objects/Doctor__c/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>IsActive</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>