OpenHealth/force-app/main/default/force-app/main/default/objects/Doctor__c/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>LastName</label>
    <type>Text</type>
    <length>255</length>
</CustomField>