OpenHealth/force-app/main/default/force-app/main/default/objects/Doctor__c/LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumber__c</fullName>
    <label>LicenseNumber</label>
    <type>Text</type>
    <length>255</length>
</CustomField>